--- a/src/Styles/FileUpload.module.css
+++ b/src/Styles/FileUpload.module.css
@@ -6,3 +6,28 @@
   padding: 8px;
   cursor: pointer;
 }
+
+/* Extra small devices (phones, less than 600px) */
+@media (max-width: 600px) {
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (min-width: 600px) and (max-width: 768px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+/* Large devices (laptops/desktops, 1024px and up) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+
+}
+
+/* Extra large devices (large desktops, 1366px and up) */
+@media (min-width: 1366px) {
+
+}
