--- a/src/Styles/RootLayout.module.css
+++ b/src/Styles/RootLayout.module.css
@@ -1,3 +1,12 @@
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.header h1 {
+    font-size: clamp(1rem, 2.5vw + 0.5rem, 2rem);
+}
+
 /* Extra small devices (phones, less than 600px) */
 @media (max-width: 600px) {
 
